# subterrain-challenge-AS-project

./: .gitignore  .gitmodules  README.md  comando.txt  stupid_instructions_Nats.txt
challange/code/: .gitignore  requirements.txt
challange/code/src/active_3d_planning_app_reconstruction/launch/: nats.launch
challange/code/src/controller_pkg/: CMakeLists.txt  package.xml
challange/code/src/controller_pkg/config/: controller_params.yaml
challange/code/src/controller_pkg/launch/: controller.launch
challange/code/src/controller_pkg/src/: PointReachedNode.cpp  controller_node.cpp  traj_publisher.cpp
challange/code/src/larics_motion_planning/: CMakeLists.txt  package.xml
challange/code/src/larics_motion_planning/scripts/: joint_trajectory_to_multi_dof_trajectory_point.py
challange/code/src/larics_motion_planning/src/: GlobalPlanner.cpp  GlobalPlannerRosInterface.cpp  ParabolicAirdropPlanner.cpp  Visualization.cpp
challange/code/src/mav_active_3d_planning/mav_active_3d_planning/: package.xml
challange/code/src/nav2d_pkg/: CMakeLists.txt  package.xml
challange/code/src/nav2d_pkg/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
challange/code/src/nav2d_pkg/launch/: nav2d.launch
challange/code/src/navigation/: Recap.txt  rrt.cpp  rrt_exploration.cpp
challange/code/src/octomap-1.7.2/: CMakeLists.txt
challange/code/src/perception/: CMakeLists.txt  README.md  package.xml  requirements.txt
challange/code/src/perception/config/: config.rviz  perception_params.yaml
challange/code/src/perception/launch/: depth2pcl.launch  depth2pcl_colored.launch  light_detection.launch  perception_pipeline.launch
challange/code/src/perception/src/: light_detector.py  light_detector_node.py
challange/code/src/simulation/: CMakeLists.txt  package.xml
challange/code/src/simulation/launch/: octomap.launch  perception.launch  simulation.launch
challange/code/src/state_machine_pkg/: CMakeLists.txt  package.xml
challange/code/src/state_machine_pkg/launch/: predefined2autonomous.launch  state_machine.launch
challange/code/src/state_machine_pkg/src/: state_machine.cpp  state_transition.cpp
challange/code/src/state_machine_pkg/srv/: Transition.srv
challange/code/src/topp_ros/scripts/: generate_toppra_trajectory.py
challange/code/src/uav_frontier_exploration_3d/: CMakeLists.txt  package.xml
(+23 files in other folders)
